<resources>
    <string name="app_name">Pets Care</string>
    <string name="botao_logar">Logar</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_voltar">Voltar</string>
    <string name="botao_salvar">Salvar</string>
    <string name="botao_ativar_lembrete">Ativar lembretes</string>
    <string name="botao_ativar_lembrete_remedio">Ativar alarme</string>
    <string name="botao_ativar_lembrete_tosa">Ativar lembrete</string>
    <string name="botao_configurar_lembrete_vacina">Configurar lembrete</string>
    <string name="texto_cadastro">Não possui uma conta? Cadastre-se</string>
    <string name="item_configuracoes">Configurações</string>
    <string name="item_sobre">Sobre</string>
    <string name="item_racas">Lista de raças</string>
    <string name="item_sair">Sair</string>
    <string name="item_adicionar_conta">Adicionar outra conta</string>
    <string name="item_adicionar_pet">Adicionar outro Pet</string>
    <string name="item_pet">Escolher Pet</string>
    <string name="radioCachorro">Cadastrar cachorro</string>
    <string name="radioGato">Cadastrar gato</string>
    <string name="radio_sexo_masculino">Macho</string>
    <string name="radio_sexo_feminino">Fêmea</string>
    <string name="spinner_racas">Raça: </string>
    <string name="checkbox_remedio">Ativar repetição</string>
    <string name="hintEmail">Digite seu email</string>
    <string name="hintSenha">Digite sua senha</string>
    <string name="hintNome">Digite seu nome</string>
    <string name="texto_sem_cadastro">Explorar sem cadastrar</string>
    <string name="texto_sem_pets">Por que não cadastra seu Pet?\nEstá tão vazio aqui :(</string>
    <string name="texto_lista_cachorro">Ver lista com as raças de cachorro</string>
    <string name="texto_lista_gato">Ver lista com as raças de gato</string>
    <string name="texto_lembrete_alimento">Determinamos que lembretes funcionam bem duas vezes por dia. A cada 12 horas enviaremos uma notificação para lembrá-lo de alimentar seu Pet!</string>
    <string name="texto_lembrete_remedio">É muito importante que dê remédio ao seu Pet na hora certa. Definiremos uma notificação com som, 10 minutos antes do horário da aplicação. \n\nMais de um alarme pode ser configurado.</string>
    <string name="texto_repeticao_remedio">A cada quantas horas devemos mandar outro lembrete para o remédio?</string>
    <string name="texto_lembrete_vacina">Configure aqui um lembrete para a vacina do seu Pet. Lembraremos você dela duas horas antes.</string>
    <string name="texto_horas_remedio">Horas:</string>
    <string name="texto_lembrete_tosa">Prezamos pelo cuidado e bem-estar do seu Pet.\nConfigure um lembrete para a tosa marcada, lembraremos você duas horas antes.</string>
    <string name="texto_cartela_vacina">Informamos aqui algumas das vcinas mais importantes que seu Pet deve tomar, junto com a respectiva idade e a periodicidade que deve ser reaplicada.</string>
    <string name="cadastro_nome_pet">Digite o nome do seu pet</string>
    <string name="cadastro_idade_pet">Digite a idade do seu pet</string>
    <string name="sobre">Desenvolvido por:</string>
    <string name="desenvolvedor1">- Flávio Caetano Lúzio dos Santos</string>
    <string name="desenvolvedor2">- Jhonatan Antônio Goulart Carvalho</string>
    <string name="desenvolvedor3">- Maria Fernanda Fernandes</string>
    <string name="materias">Projeto prático das matérias:</string>
    <string name="materia1">- Tecnologias Emergentes</string>
    <string name="materia2">- Trabalho de Conclusão de Curso</string>
    <string name="escola">CEFET-MG - Unidade Contagem</string>
    <string name="ano">2018</string>
    <string name="icone1">Informações</string>
    <string name="icone2">Horários de alimento</string>
    <string name="icone3">Remédios</string>
    <string name="icone4">Vacinas</string>
    <string name="icone5">Veterinários</string>
    <string name="icone6">Tosa</string>
    <string name="nomePet">Nome:</string>
    <string name="idadePet">Idade:</string>
    <string name="racaPet">Raça:</string>
    <string name="sexoPet">Sexo:</string>
</resources>
