<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/item_configuracoes"
        android:title="@string/item_configuracoes"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/item_sobre"
        android:title="@string/item_sobre"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item android:id="@+id/item_racas"
        android:title="@string/item_racas"
        android:orderInCategory="300"
        app:showAsAction="never"/>

    <item android:id="@+id/item_sair"
        android:title="@string/item_sair"
        android:orderInCategory="400"
        app:showAsAction="never"/>

    <item android:id="@+id/item_adicionar_pet"
        android:title="@string/item_adicionar_pet"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_pets"/>

</menu>